fixed the cite name link

--- a/views/base.html
+++ b/views/base.html
@@ -6,7 +6,7 @@
 
 
 <body>
-<h1>{{ header }}</h1>
+<h1><a style="color:black;text-decoration: none;"  href="{{path}}"> CS3500</a></h1>
 
 <div class="box" id="menu">
 	        	<span class="menu_item" id="menu1"><a href="{{path}}Assignment-1">Assignment 1</a></span>
