fixed the linking

--- a/twig/views/base.html
+++ b/twig/views/base.html
@@ -1,17 +1,18 @@
 <html>
 <head>
 <TITLE>{{ header }}</TITLE>
-<link rel="stylesheet" type="text/css" href="{{path}}twig/css/stylesheet.css">
+<base href = "/CS3500/" />
+<link rel="stylesheet" type="text/css" href="./twig/css/stylesheet.css">
 </head>
 
 
 <body>
 <div id="header" style="color:white">
-<h1><a style="color:green;text-decoration: none;"  href="{{path}}"> CS3500</a></h1>
+<h1><a style="color:green;text-decoration: none;"  href="./"> CS3500</a></h1>
 </div>
 <div class="box" id="menu">
-	        	<span class="menu_item" id="menu1"><a href="{{path}}Assignment-1">Assignment 1</a></span>
-	        	<span class="menu_item" id="menu2"><a href="{{path}}test">Testing</a></span>
-	        	<span class="menu_item" id="menu3"><a href="{{path}}About">About</a></span>
+	        	<span class="menu_item" id="menu1"><a href="./Assignment-1">Assignment 1</a></span>
+	        	<span class="menu_item" id="menu2"><a href="./test">Testing</a></span>
+	        	<span class="menu_item" id="menu3"><a href="./About">About</a></span>
 	        </div>
 </body></html>
