--- a/twig/views/base.html
+++ b/twig/views/base.html
@@ -1,7 +1,22 @@
 <html>
 <head>
 <TITLE>{{ header }}</TITLE>
-<base href = "/CS3500/" />
+<!-- Change base dependent on system -->
+<!--<base href = "https://cs.wmich.edu/~brp9209/CS3500/" />-->
+<p id="test"></p>
+<script>
+function urlpath() {
+var hosts = "brp9209";
+if (hosts.indexOf("brp9209") > -1 ){
+var strLink = "https://cs.wmich.edu/~brp9209/CS3500/"; 
+} else {
+var strLink = "/CS3500/";
+}
+return "<base href = "+strLink+" />"; 
+}
+document.getElementById("test").innerHTML = urlpath();
+</script>
+
 <link rel="stylesheet" type="text/css" href="./twig/css/stylesheet.css">
 </head>
 
@@ -15,4 +30,11 @@
 	        	<span class="menu_item" id="menu2"><a href="./test">Testing</a></span>
 	        	<span class="menu_item" id="menu3"><a href="./About">About</a></span>
 	        </div>
+
+<p id="demo"></p>
+<script>
+document.getElementById("demo").innerHTML = 
+"Page location is: " + window.location.href;
+</script>
+
 </body></html>
