fixed js shit paths

--- a/twig/views/base.html
+++ b/twig/views/base.html
@@ -6,7 +6,7 @@
 <p id="test"></p>
 <script>
 function urlpath() {
-var hosts = "brp9209";
+var hosts = window.location.href;
 if (hosts.indexOf("brp9209") > -1 ){
 var strLink = "https://cs.wmich.edu/~brp9209/CS3500/"; 
 } else {
