--- a/twig/views/base.html
+++ b/twig/views/base.html
@@ -9,6 +9,8 @@ function urlpath() {
 var hosts = window.location.href;
 if (hosts.indexOf("brp9209") > -1 ){
 var strLink = "https://cs.wmich.edu/~brp9209/CS3500/"; 
+} else if (hosts.indexOf("pmp2439") > -1 ){
+var strLink = "https://cs.wmich.edu/~pmp2439/CS3500/";
 } else {
 var strLink = "/CS3500/";
 }
@@ -27,7 +29,7 @@ document.getElementById("test").innerHTML = urlpath();
 </div>
 <div class="box" id="menu">
 	        	<span class="menu_item" id="menu1"><a href="./Assignment-1">Assignment 1</a></span>
-	        	<span class="menu_item" id="menu2"><a href="./test">Testing</a></span>
+	        	<span class="menu_item" id="menu2"><a href="./Testing">Testing</a></span>
 	        	<span class="menu_item" id="menu3"><a href="./About">About</a></span>
 	        </div>
 
