--- a/twig/views/base.html
+++ b/twig/views/base.html
@@ -18,7 +18,7 @@
         }
         document.getElementById("test").innerHTML = urlpath();
     </script>
-    <link rel="shortcut icon" href="./twig/assets/favicon.ico">
+    <link rel="shortcut icon" href="./twig/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="./twig/css/stylesheet.css">
 </head>
 
