--- a/twig/views/base.html
+++ b/twig/views/base.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+	<meta charset="utf-8">
     <TITLE>{{ header }}</TITLE>
     <!-- Change base dependent on system -->
     <p id="test"></p>
@@ -18,7 +19,7 @@
         }
         document.getElementById("test").innerHTML = urlpath();
     </script>
-    <link rel="shortcut icon" href="./twig/assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./twig/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="./twig/css/stylesheet.css">
 </head>
 
