--- a/twig/views/base.html
+++ b/twig/views/base.html
@@ -19,7 +19,7 @@
         }
         document.getElementById("test").innerHTML = urlpath();
     </script>
-    <link rel="shortcut icon" href="./twig/assets/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./twig/assets/ninjacat.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="./twig/css/stylesheet.css">
 </head>
 
