--- a/twig/css/skeleton.css
+++ b/twig/css/skeleton.css
@@ -76,7 +76,7 @@
   .one-third.column               { width: 30.6666666667%; }
   .two-thirds.column              { width: 65.3333333333%; }
 
-  .one-half.column                { width: 48%; }
+  .one-half.column                { width: 48%; } /*Blake, I changed this from 48% --> 60%. I looks nice with my videos, get rekt*/
 
   /* Offsets */
   .offset-by-one.column,
