created assignment two on menu bar, i hope

--- a/twig/views/base.html
+++ b/twig/views/base.html
@@ -55,6 +55,7 @@
       </div>
       <div class="box" id="menu">
           <span class="menu_item" id="menu1"><a href="./Assignment-1">Assignment 1</a></span>
+          <span class="menu_item" id="menu4"><a href="./Assignment-2">Assignment 2</a></span>
           <span class="menu_item" id="menu2"><a href="./Testing">Testing</a></span>
           <span class="menu_item" id="menu3"><a href="./About">About</a></span>
       </div>
