added our names

--- a/twig/views/base.html
+++ b/twig/views/base.html
@@ -5,8 +5,8 @@
   <!-- Basic Page Needs –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <TITLE>{{ header }}</TITLE>
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="CS3500">
+  <meta name="author" content="Blake Wrege and Patrick Amolsch">
   
   <!-- Change base dependent on system -->
   <p id="test"></p>
