--- a/twig/views/base.html
+++ b/twig/views/base.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <TITLE>{{ header }}</TITLE>
   <meta name="description" content="CS3500">
-  <meta name="author" content="Blake Wrege and Patrick Amolsch">
+  <meta name="author" content="Blake Wrege and Brandon Kelly">
   
   <!-- Change base dependent on system -->
   <p id="test"></p>
@@ -15,8 +15,8 @@
           var hosts = window.location.href;
           if (hosts.indexOf("brp9209") > -1) {
               var strLink = "https://cs.wmich.edu/~brp9209/CS3500/";
-          } else if (hosts.indexOf("pmp2439") > -1) {
-              var strLink = "https://cs.wmich.edu/~pmp2439/CS3500/";
+          } else if (hosts.indexOf("bsm2924") > -1) {
+              var strLink = "https://cs.wmich.edu/~bsm2924/CS3500/";
           } else {
               var strLink = "/CS3500/";
           }
